# passport-mcp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: publish-pypi.yml  python-sdk.yml
examples/: hello_world.py
extension/: README.md  manifest.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
extension/src/background/: index.ts
extension/src/popup/: index.html  index.ts
extension/src/types/: index.ts
sdks/python/: pyproject.toml
sdks/python/browserpassport/: __init__.py  cli.py  client.py
sdks/python/examples/: basic_usage.py  hello_world.py  linkedin_mcp.py  searcher.py
sdks/python/passportmcp/: __init__.py  cli.py  client.py  passportmcp.py
sdks/python/scripts/: publish.sh  setup-dev.sh
sdks/python/tests/: test_cli.py  test_client.py
sdks/typescript/: README.md
shared/native-host/: native_host.py
