[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "passportmcp"
version = "0.1.0"
description = "Python SDK for Passport MCP"
requires-python = ">=3.10"
dependencies = ["requests"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
passportmcp = "passportmcp.cli:cli"

[tool.hatch.build.targets.sdist]
include = [
    "/passportmcp",
    "/shared/native-host/*.py", # Include native host from shared directory
]

[tool.hatch.build.targets.wheel]
packages = ["passportmcp"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
